--- a/02 - Advanced Matplotlib Concepts.ipynb
+++ b/02 - Advanced Matplotlib Concepts.ipynb
@@ -5,7 +5,7 @@
    "id": "88440b0c",
    "metadata": {},
    "source": [
-    "# Advanced Matplotlib Concepts Lecture\n",
+    "# Advanced Matplotlib Concepts\n",
     "\n",
     "In this workbook we cover some advanced concepts which you won't usually use as often. You can always reference the documentation for more resources."
    ]
@@ -1055,7 +1055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
